# GLBox

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ExampleSandbox.cpp  LICENCE.md  README.md  Sandbox.cpp  Sandbox.h  build.sh  main.cpp
.cache/clangd/index/: GLlog.cpp.094EA7F7D31DEEF5.idx  GLlog.cpp.A706B0E8299D71C8.idx  GLlog.h.138860A279EA43B9.idx  GLlog.h.1C94B4AC45EFA053.idx  IndexBuffer.cpp.8F95E199FF6D7EBF.idx  IndexBuffer.h.05768EBEFC44BE83.idx  Renderer.cpp.28D21F7BD09A64AC.idx  Renderer.h.7B65F56FBAB19AC4.idx  Scene.h.C5DDFEBDCBFA0B2C.idx  SceneClearColor.h.D240B9B57287703D.idx  SceneTriangle.h.E7D1B4370B6401C9.idx  Shader.cpp.783FD4A981252D05.idx  Shader.cpp.D2DAD41D3508BFA1.idx  Shader.h.4D4F0150F36D7457.idx  Shader.h.79EF90CF37655158.idx  Texture.cpp.89120177EA14955D.idx  Texture.h.216F0920071A2E12.idx  VertexArray.cpp.1957FCABCAC861B6.idx  VertexArray.h.53455053F82E28A6.idx  VertexBuffer.cpp.2977244488FD9BB7.idx  VertexBuffer.h.161F7CE9FB5BC3A8.idx  VertexBufferLayout.cpp.7143EB5171EB7850.idx  VertexBufferLayout.h.2586735D6B00A472.idx  _fixes.hpp.A2A6E630552023C8.idx  _vectorize.hpp.14A7189AE9967BDE.idx  common.hpp.9B01E4EBC27A8A34.idx  compute_common.hpp.B9671017241366C0.idx  compute_vector_relational.hpp.A2FE2159FA6E0AE9.idx  constants.hpp.86D4748F919A798A.idx  constants.inl.92269D9762EC1068.idx  exponential.hpp.6B9E02D9DBD8CDA4.idx  func_common.inl.780C1A046FE7C7B9.idx  func_exponential.inl.7CB1267F9D617542.idx  (+139 more)
assets/shaders/: Basic.frag  Basic.frag.shader  Basic.shader  Basic.vert  BasicTexture.frag  Batching.frag  Batching.vert  BatchingCircle.frag  Circle.frag  CircleInvertedSolid.frag  CircleSolid.frag  CircleWithTexture.frag  CircularTexture.frag  HoleInRect.frag
src/: GLBox.h  GLlog.cpp  GLlog.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glbpch.cpp  glbpch.h  main.cpp
src/Core/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  EntryPoint.h  GLlog.cpp  GLlog.h  IndexBuffer.cpp  Input.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  Window.cpp
src/ExampleLayers/: BatchingLayer.h  CircleLayer.h  ClearColorLayer.h  FixedGridSpacePartitionLayer.h  QuadTreeTestLayer.h  VerletInstancingLayer.h  VerletLayer.h
src/layer/: Batch.h  BatchRenderer.h  Batcher.h  Batching.h  EntryPoint.h  GLlog.cpp  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  InstanceRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/meshes/: Circle.h  Mesh.h  Quad.cpp  Quad.h  Vertex.h
src/primatives/: Circle.primative.h  PrimativeCircle.h  PrimativeRect.h  Rect.primative.h
src/scenes/: Batching.scene.h  Circle.scene.h  ClearColor.scene.h  FixedGridSpacePartition.scene.h  Instancing.h  Instancing.scene.h  QuadTreeTest.scene.h  Scene.h  SceneCircle.h  SceneClearColor.h  SceneTriangle.h  SceneVerlet.h  Verlet.scene.h  VerletInstancing.scene.h
(+83 files in other folders)
